Spring-Boot/trolley/src/main/java/local/example/trolley/api/error/ErrorCode.java
package local.example.trolley.api.error;

public enum ErrorCode {
}
